--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyProject</string>
+    <string name="app_name">KidEng</string>
     <string name="btn_continue">Продолжить</string>
     <string name="btn_theme">Выбор темы</string>
     <string name="btn_restart">Начать заново</string>
