--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,8 @@
     <string name="theme_number">Номер темы:</string>
     <string name="theme_description">Описание темы:</string>
     <string name="dialog_title">Начать заново</string>
-    <string name="dialog_description">После нажатия кнопки \"OK\" весь полученный вами прогресс будет сброшен.\nВы точно хотите сделать это?</string>
+    <string name="dialog_description">После нажатия кнопки \"OK\" весь полученный вами прогресс будет сброшен.</string>
+    <string name="dialog_agreement">Вы точно хотите сделать это?</string>
     <string name="dialogBtn_ok">OK</string>
     <string name="dialogBtn_cancel">Отмена</string>
 </resources>
