--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">KidEng</string>
     <string name="btn_continue">Продолжить</string>
     <string name="btn_theme">Выбор темы</string>
-    <string name="btn_restart">Начать заново</string>
+    <string name="btn_restart">Сброс статистики</string>
     <string name="theme_name">Тема:</string>
     <string name="theme_number">Номер темы:</string>
     <string name="theme_description">Описание темы:</string>
@@ -11,4 +11,6 @@
     <string name="dialog_agreement">Вы точно хотите сделать это?</string>
     <string name="dialogBtn_ok">OK</string>
     <string name="dialogBtn_cancel">Отмена</string>
+    <string name="word_English">Английское</string>
+    <string name="word_Russian">Перевод</string>
 </resources>
