--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="level">Уровень</string>
     <string name="themes">Темы</string>
     <string name="write_theme_name">Название темы</string>
+    <string name="search">Поиск</string>
 
 
 </resources>
