--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,8 @@
     <string name="total_answers">Всего ответов</string>
     <string name="right_answers">Правильных ответов</string>
     <string name="wrong_answers">Неправильных ответов</string>
+    <string name="skipped_words">Пропущенные слова</string>
+    <string name="skipped_words_game">Пропущенных слов</string>
 
 
 </resources>
