disable checkbox and work with stackback

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="wrong_answers">Неправильных ответов</string>
     <string name="skipped_words">Пропущенные слова</string>
     <string name="skipped_words_game">Пропущенных слов</string>
+    <string name="game">Игра</string>
 
 
 </resources>
