--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,10 @@
     <string name="skipped_words">Пропущенные слова</string>
     <string name="skipped_words_game">Пропущенных слов</string>
     <string name="game">Игра</string>
+    <string name="link"><a href="https://www.google.com/">Google</a></string>
+    <string name="tg_link"><a href="https://www.t.me/soudagh">Telegram</a></string>
+    <string name="gh_link"><a href="https://github.com/Soudagh">GitHub</a></string>
+    <string name="ds_link"><a href="https://discord.gg/89squad">Discord</a></string>
 
 
 </resources>
