--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -80,4 +80,5 @@
     <string name="value_goal_snack_without">value of goal</string>
     <string name="time_left">Time left:</string>
     <string name="words_left">Words left:</string>
+    <string name="no_skipped_words">You didn`t skip any words!</string>
 </resources>
